- Refactored some more old classes - Reworked Custom Hotbar & Spell System - Added charges to Custom Hotbar - Fixed Tools not applying their stats when using AutoTool - Bunch of smaller bugfixes